# office-wall-clock

./: .gitignore  404.html  DEPLOYMENT.md  DEPLOYMENT_QUICK_START.md  DOCS_DEPLOYMENT.md  GITHUB_PAGES_SETUP.md  Makefile  PROJECT_SUMMARY.md  README.md  index.html  mkdocs.yml  requirements-docs.txt  sitemap.xml
.github/workflows/: deploy-docs.yml
ASSEMBLY_GUIDE/: index.html
CONFIGURATION/: index.html
FIRMWARE_INSTALLATION/: index.html
TROUBLESHOOTING/: index.html
USAGE_GUIDE/: index.html
assembly/breadboard/: index.html
assembly/enclosure/: index.html
assembly/final-testing/: index.html
assembly/preparation/: index.html
assembly/soldering/: index.html
assembly/testing/: index.html
deployment/quick-start/: index.html
docs/: ASSEMBLY_GUIDE.md  CONFIGURATION.md  FIRMWARE_INSTALLATION.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  index.html
docs-site/: index.md
docs-site/assembly/: breadboard.md  enclosure.md  final-testing.md  preparation.md  soldering.md  testing.md
docs-site/deployment/: github-pages.md  quick-start.md
docs-site/firmware/: api-integration.md  architecture.md  configuration.md  installation.md  overview.md
docs-site/getting-started/: overview.md  quick-start.md  timeline.md
firmware/: .gitignore  Cargo.toml  README.md  memory.x  platformio.ini  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/api-integration/: index.html
firmware/architecture/: index.html
firmware/configuration/: index.html
firmware/installation/: index.html
firmware/overview/: index.html
firmware/src/: api_client.cpp  api_client.h  button_handler.cpp  button_handler.h  config.h  config.rs  led_controller.cpp  led_controller.h  main.cpp  main.rs  types.h
firmware/src/tasks/: button.rs  led.rs  mod.rs  wifi.rs
firmware/test/: test_button.cpp  test_led.cpp
hardware/: BILL_OF_MATERIALS.md  ENCLOSURE_DESIGN.md  HARDWARE_SPECS.md
search/: search_index.json
(+47 files in other folders)
