[package]
name = "wall-clock-in-firmware"
version = "1.0.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.76"

[dependencies]
# Core ESP32-C6 HAL (pure Rust)
esp-hal = { version = "0.20", features = ["esp32c6"] }
esp-backtrace = { version = "0.14", features = ["esp32c6", "exception-handler", "panic-handler", "defmt"] }
esp-println = { version = "0.11", features = ["esp32c6", "defmt-espflash"] }
esp-alloc = "0.4"

# WiFi support (pure Rust)
esp-wifi = { version = "0.9", features = ["esp32c6", "wifi", "async", "embassy-net"] }

# Embassy async runtime
embassy-executor = { version = "0.6", features = ["arch-riscv32", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
embassy-sync = "0.6"
embassy-futures = "0.1"
embassy-net = { version = "0.4", features = ["tcp", "udp", "dns", "dhcpv4", "medium-ethernet"] }

# LED control for WS2812B
smart-leds = { version = "0.4", default-features = false }
esp-hal-smartled = { version = "0.14", features = ["esp32c6"] }

# HTTP client (async, lightweight)
reqwless = { version = "0.12", default-features = false }

# Serialization (no_std compatible)
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-json-core = "0.6"
heapless = "0.8"

# Modern logging
defmt = "0.3"

# Static async primitives
static_cell = "2.1"

# Async traits
embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io-async = "0.6"

[dev-dependencies]
defmt-test = "0.3"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
debug = false
strip = true
overflow-checks = true

[profile.release-size]
inherits = "release"
opt-level = "z"

[[bin]]
name = "wall-clock-in-firmware"
test = false
bench = false
